@@ -14,6 +14,7 @@
 * Adyen: Idempotency for non-purchase requests [molbrown] #3164
 * FirstData e4 v27: Support v28 url and stored creds [curiousepic] #3165
 * WorldPay: Fix element order for 3DS + stored cred [bayprogrammer] #3172
+* Braintree: Add risk data to returned response [jknipp] #3169
 
 == Version 1.91.0 (February 22, 2019)
 * WorldPay: Pull CVC and AVS Result from Response [nfarve] #3106
